# Arcedas

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/arcedas/: __init__.py
src/arcedas/utils/: __init__.py  string_utils.py
tests/: test_more_string_utils.py  test_string_utils.py
